[package]
name = "rs-pseudocode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.3"
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6.2"
humantime = "2.1.0"
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["macros"] }
